--- a/first.html
+++ b/first.html
@@ -14,6 +14,7 @@
     <header>
         <h1>Guess My Number!</h1>
         <p class="between">(Between 1 and 20)</p>
+        <p class="between">(Betweujfty and 69)</p>
         <button class="btn again">Again!</button>
         <div class="number">?</div>
     </header>
